log/build_2024-10-17_15-06-59/yyh_object/stderr.log
  File "/home/yyh/ros2_ws/install/yyh_object/lib/python3.8/site-packages/yyh_object/camera.py", line 66
    ret frame = self.cap.read()
        ^
SyntaxError: invalid syntax

